--- a/jobs/gabriela-oliveira/index.html
+++ b/jobs/gabriela-oliveira/index.html
@@ -38,30 +38,33 @@
     </section>
 
     <section class="container services py-5">
-        <div class="row">
-            <div class="col-md-4">
-                <svg xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="img" width="75" height="75" preserveAspectRatio="xMidYMid meet" viewBox="0 0 24 24"><path fill="#CD9179" d="M11 2a8.002 8.002 0 0 1 7.934 6.965l2.25 3.539c.148.233.118.58-.225.728L19 14.07V17a2 2 0 0 1-2 2h-1.999L15 22H6v-3.694c0-1.18-.436-2.297-1.244-3.305A8 8 0 0 1 11 2zm-.53 5.763a1.75 1.75 0 1 0-2.475 2.474L11 13.243l3.005-3.006a1.75 1.75 0 1 0-2.475-2.474l-.53.53l-.53-.53z"/></svg>
-                <h3>Atendimento Psicológico</h3>
-                <p>Esse é o serviço de Psicoterapia, onde é possível o atendimento online ou presencial. Gabriela Oliveira apresenta o registro: CRP: 07/18591. O atendimento possui duração de 60 minutos e são realizados mediante agendamentos pelo telefone: 53984190636.</p>
-                <p>Público-alvo: adultos. Agenda aberta no momento atual.</p>
-                <a href="#">Agendar Consulta</a>
-            </div>
-
-            <div class="col-md-4">
-                <h3>Sociedade dos Psicólogos</h3>
-                <p>Na Sociedade dos Psicólogos é possível fazer networking, ministrar cursos, assistir aulas, entrar para o grupo do Telegram e inclusive criar conteúdos para o nosso Instagram. Quer ser membro? Veja a Sociedade dos Psicólogos no Instagram e faça seu cadastro, e no link da nossa bio já é possível baixar o E-book gratuito da Sociedade. Venha fazer parte da Sociedade dos Psicólogos.</p>
-                <a href="#">Ver Perfil</a>
-            </div>
-            <div class="col-md-4">
-                <h3>Comunicação Digital</h3>
-                <p>O curso: O PODER DA COMUNICAÇÃO consta 54 aulas até o momento, onde você vai aprender sobre como ter uma presença digital, criar sua marca, destravar na gravação de vídeos, montar cenários, usar a psicologia das cores e ainda fortalecer seu Mindset Digital. Aulas curtas, didáticas e voltadas para quem tem poucos conhecimentos sobre Instagram e Marketing Digital. Sabemos hoje a importância da presença nas redes sociais, então não fique de fora. Para mais informações entre em contato pelo Direct do Instagram.</p>
-                <a href="#">Adquirir Curso</a>
+        <div class="row justify-content-center">
+            <div class="col-md-10">
+                <div class="row">
+                    <div class="col-md-4 py-3">
+                        <svg xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="img" width="75" height="75" preserveAspectRatio="xMidYMid meet" viewBox="0 0 24 24"><path fill="#CD9179" d="M11 2a8.002 8.002 0 0 1 7.934 6.965l2.25 3.539c.148.233.118.58-.225.728L19 14.07V17a2 2 0 0 1-2 2h-1.999L15 22H6v-3.694c0-1.18-.436-2.297-1.244-3.305A8 8 0 0 1 11 2zm-.53 5.763a1.75 1.75 0 1 0-2.475 2.474L11 13.243l3.005-3.006a1.75 1.75 0 1 0-2.475-2.474l-.53.53l-.53-.53z"/></svg>
+                        <h3>Atendimento Psicológico</h3>
+                        <p>Esse é o serviço de Psicoterapia, onde é possível o atendimento online ou presencial. Gabriela Oliveira apresenta o registro: CRP: 07/18591. O atendimento possui duração de 60 minutos e são realizados mediante agendamentos pelo telefone: 53984190636.</p>
+                        <p>Público-alvo: adultos. Agenda aberta no momento atual.</p>
+                        <a href="#">Agendar Consulta</a>
+                    </div>
+                    <div class="col-md-4 py-3">
+                        <h3>Sociedade dos Psicólogos</h3>
+                        <p>Na Sociedade dos Psicólogos é possível fazer networking, ministrar cursos, assistir aulas, entrar para o grupo do Telegram e inclusive criar conteúdos para o nosso Instagram. Quer ser membro? Veja a Sociedade dos Psicólogos no Instagram e faça seu cadastro, e no link da nossa bio já é possível baixar o E-book gratuito da Sociedade. Venha fazer parte da Sociedade dos Psicólogos.</p>
+                        <a href="#">Ver Perfil</a>
+                    </div>
+                    <div class="col-md-4 py-3">
+                        <h3>Comunicação Digital</h3>
+                        <p>O curso: O PODER DA COMUNICAÇÃO consta 54 aulas até o momento, onde você vai aprender sobre como ter uma presença digital, criar sua marca, destravar na gravação de vídeos, montar cenários, usar a psicologia das cores e ainda fortalecer seu Mindset Digital. Aulas curtas, didáticas e voltadas para quem tem poucos conhecimentos sobre Instagram e Marketing Digital. Sabemos hoje a importância da presença nas redes sociais, então não fique de fora. Para mais informações entre em contato pelo Direct do Instagram.</p>
+                        <a href="#">Adquirir Curso</a>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
 
     <footer>
-        Gabriela Oliveira &copy; 2022.
+        <p class="text-center py-3">Gabriela Oliveira &copy; 2022.</p>
     </footer>
 
     <!-- Bootstrap 5.2 -->
