--- a/studies-v4/01/index.html
+++ b/studies-v4/01/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Nº1 | ABOUT SECTION</title>
 
     <!-- stylesheets -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css">
@@ -16,7 +16,7 @@
     <header class="container">
         <div class="row justify-content-center">
             <div class="col-md-8">
-                <div class="p-5">
+                <div class="pl-5 pr-5 pt-3 mt-4 mb-5 header--effect">
                     <h1>Nº1 | ABOUT SECTION</h1>
                     <p>02/08/2022 | Exercício livre.
                         <br>Tipografia: Aqua Grotesque e Noto Sans.</p>
