--- a/studies-v4/02/index.html
+++ b/studies-v4/02/index.html
@@ -16,13 +16,11 @@
     <header class="container">
         <div class="row justify-content-center">
             <div class="col-md-8">
-                <div class="p-5">
-                    <div class="pl-5 pr-5 pt-3 mt-4 mb-5 header--effect">
-                        <h1>Nº2 | SECTION</h1>
-                        <p>03/08/2022 | Exercício livre.
-                            <br>Tipografia: Stoked e Raleway.</p>
-                        <hr>
-                    </div>
+                <div class="pl-5 pr-5 pt-3 mt-4 mb-5 header--effect">
+                    <h1>Nº2 | SECTION</h1>
+                    <p>03/08/2022 | Exercício livre.
+                        <br>Tipografia: Stoked e Raleway.</p>
+                    <hr>
                 </div>
             </div>
         </div>
@@ -33,9 +31,9 @@
             <div class="col-md-9">
                 <div class="row align-items-center">
                     <div class="col-md-6">
-                        <img src="https://images.unsplash.com/photo-1656111928961-f2881760462e?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=464&q=80" alt="cover" class="img-fluid">
+                        <img src="https://images.unsplash.com/photo-1656111928961-f2881760462e?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=464&q=80" alt="cover" class="img-fluid animate__animated animate__rollIn">
                     </div>
-                    <div class="col-md-6">
+                    <div class="col-md-6 animate__animated animate__fadeInRight">
                         <h2 class="py-4">
                             SEJA A
                             <br><span>BRAVURA</span> DO OUTONO.
@@ -49,7 +47,8 @@
     
     <footer>
         <div class="container text-center mt-5 mb-3">
-            <p><a href="https://anotherleo.github.io">Leo Thomas Monteiro</a> &copy; 2022. Imagem de Fahrad Norouzi via <a href="https://unsplash.com/photos/wd1qhU1Iz5Q">Unsplash</a>.</p>
+            <p><a href="https://anotherleo.github.io">Leo Thomas Monteiro</a> &copy; 2022. <a href="../index.html">Estudos Diários de Código e Composição.</a>
+                <br>Imagem de Fahrad Norouzi via <a href="https://unsplash.com/photos/wd1qhU1Iz5Q">Unsplash</a>.</p>
         </div>
         <div class="colored-line"></div>
     </footer>
