--- a/studies-v4/01/index.html
+++ b/studies-v4/01/index.html
@@ -56,7 +56,8 @@
     
     <footer>
         <div class="container text-center mt-4 mb-3">
-            <p><a href="https://anotherleo.github.io">Leo Thomas Monteiro</a> &copy; 2022. Imagem de Daniel Alexander via <a href="https://unsplash.com/photos/_KHP8d4EbbE">Unsplash</a>.</p>
+            <p><a href="https://anotherleo.github.io">Leo Thomas Monteiro</a> &copy; 2022. <a href="../index.html">Estudos Diários de Código e Composição.</a>
+                <br>Imagem de Daniel Alexander via <a href="https://unsplash.com/photos/_KHP8d4EbbE">Unsplash</a>.</p>
         </div>
         <div class="colored-line"></div>
     </footer>
