--- a/studies-v4/03/index.html
+++ b/studies-v4/03/index.html
@@ -41,8 +41,8 @@
 
     <footer>
         <div class="container text-center mt-5 mb-3">
-            <p><a href="https://anotherleo.github.io">Leo Thomas Monteiro</a> &copy; 2022. 
-                Imagem de Mahdi Bafande via <a href="https://unsplash.com/photos/9MVbH4PURUo">Unsplash</a>.</p>
+            <p><a href="https://anotherleo.github.io">Leo Thomas Monteiro</a> &copy; 2022. <a href="../index.html">Estudos Diários de Código e Composição.</a>
+                <br>Imagem de Mahdi Bafande via <a href="https://unsplash.com/photos/9MVbH4PURUo">Unsplash</a>.</p>
         </div>
         <div class="colored-line"></div>
     </footer>
