--- a/studies-v4/02/index.html
+++ b/studies-v4/02/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nº2</title>
+    <title>Nº2 | ANIMATED SECTION</title>
 
     <!-- stylesheets -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css">
@@ -17,7 +17,7 @@
         <div class="row justify-content-center">
             <div class="col-md-8">
                 <div class="pl-5 pr-5 pt-3 mt-4 mb-5 header--effect">
-                    <h1>Nº2 | SECTION</h1>
+                    <h1>Nº2 | ANIMATED SECTION</h1>
                     <p>03/08/2022 | Exercício livre.
                         <br>Tipografia: Stoked e Raleway.</p>
                     <hr>
