--- a/studies-v4/index.html
+++ b/studies-v4/index.html
@@ -53,11 +53,23 @@
                             <p>Nº 3</p>
                         </a>
                     </div>
+
+                    <div class="col-md-3 py-1">
+                        <a class="card" href="04/index.html">
+                            <img src="https://images.unsplash.com/photo-1630494023287-b4863ca73af7?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=681&q=80" alt="cover" class="img-fluid">
+                            <p>Nº 4</p>
+                        </a>
+                    </div>
                 </div>
             </div>
         </div>
 
     </main>
 
+    <footer>
+        <div class="container text-center mt-5 mb-3">
+            <p><a href="https://anotherleo.github.io">Leo Thomas Monteiro</a> &copy; 2022.</p>
+        </div>
+    </footer>
 
 </body>
