--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <!-- SEO I -->
     <meta name="url" content="https://anotherleo.github.io/leo-projects">
     <meta name="description" content="Web developer especializado em front-end, com domínio de HTML5 semântico, CSS3, JavaScript e React.js. Trabalha na empresa Londrina S/A como desenvolvedor front-end. Interessado em código limpo e arquitetura de CSS, usa Less.js e Bootstrap para agilizar seus projetos. No tempo livre é curioso sobre o mundo e freelancer.">
-    <meta name="keywords" content="Leo Thomas Monteiro, anotherleo, JavaScript, Responsive Web Design, Vue.js">
+    <meta name="keywords" content="Leo Thomas Monteiro, anotherleo, JavaScript, Responsive Web Design, React.js">
     <meta name="author" content="Leo Thomas Monteiro">
 
     <!-- SEO II | Open Graph -->
@@ -51,8 +51,9 @@
                     <br><span>projetos</span> & 
                     <br>aulas do <span>Leo</span>
                 </h2>
-                <p>Lista de cursos com projetos, roadmap de estudos e projetos paralelos para treinar novas skills.</p>
-                <a href="#" class="intro__contact">Ver Roadmap</a>
+                <p>Pasta de estudos e cursos com projetos, roadmap de skills e projetos paralelos para treinar o aprendizado.</p>
+                <p>Em construção.</p>
+                <a href="https://anotherleo.github.io" class="intro__contact">Voltar ao Portfólio</a>
             </div>
             <div class="col-md-3 pt-5">
                 <img src="portrait.jpg" alt="cover" class="img-fluid portrait">
@@ -60,6 +61,7 @@
         </section>
     </main>
 
+    <!--
     <section class="container courses">
         <div class="row justify-content-center">
             <div class="col-md-8">
@@ -118,6 +120,7 @@
         </div>
         <div class="colored-line"></div>
     </footer>
+    -->
 
     <!-- Bootstrap 5.2 -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
