--- a/studies-v4/index.html
+++ b/studies-v4/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Estudos Diários de Código e Composição</title>
+    <title>Estudos Diários de Códigos e Composição</title>
 
     <!-- stylesheets -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css">
@@ -60,10 +60,16 @@
                             <p>Nº 4</p>
                         </a>
                     </div>
+
+                    <div class="col-md-3 py-1">
+                        <a class="card" href="05/index.html">
+                            <img src="https://images.unsplash.com/photo-1533738363-b7f9aef128ce?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=435&q=80" alt="cover" class="img-fluid">
+                            <p>Nº 5</p>
+                        </a>
+                    </div>
                 </div>
             </div>
         </div>
-
     </main>
 
     <footer>
