--- a/studies-v4/02/index.html
+++ b/studies-v4/02/index.html
@@ -47,7 +47,7 @@
     
     <footer>
         <div class="container text-center mt-5 mb-3">
-            <p><a href="https://anotherleo.github.io">Leo Thomas Monteiro</a> &copy; 2022. <a href="../index.html">Estudos Diários de Código e Composição.</a>
+            <p><a href="https://anotherleo.github.io">Leo Thomas Monteiro</a> &copy; 2022. <a href="../index.html">Estudos Diários de Códigos e Composição.</a>
                 <br>Imagem de Fahrad Norouzi via <a href="https://unsplash.com/photos/wd1qhU1Iz5Q">Unsplash</a>.</p>
         </div>
         <div class="colored-line"></div>
