--- a/studies-v4/04/index.html
+++ b/studies-v4/04/index.html
@@ -61,7 +61,7 @@
 
     <footer>
         <div class="container text-center mt-5 mb-3">
-            <p><a href="https://anotherleo.github.io">Leo Thomas Monteiro</a> &copy; 2022. <a href="../index.html">Estudos Diários de Código e Composição.</a>
+            <p><a href="https://anotherleo.github.io">Leo Thomas Monteiro</a> &copy; 2022. <a href="../index.html">Estudos Diários de Códigos e Composição.</a>
                 <br>Imagens via <a href="https://unsplash.com">Unsplash</a>.</p>
         </div>
         <div class="colored-line"></div>
