--- a/studies-v4/05/index.html
+++ b/studies-v4/05/index.html
@@ -39,7 +39,7 @@
 
     <footer>
         <div class="container text-center mt-3 mb-3">
-            <p><a href="https://anotherleo.github.io">Leo Thomas Monteiro</a> &copy; 2022. <a href="../index.html">Estudos Diários de Código e Composição.</a>
+            <p><a href="https://anotherleo.github.io">Leo Thomas Monteiro</a> &copy; 2022. <a href="../index.html">Estudos Diários de Códigos e Composição.</a>
                 <br>Imagem de Raoul Droog via <a href="https://unsplash.com/photos/yMSecCHsIBc">Unsplash</a>.</p>
         </div>
         <div class="colored-line"></div>
