--- a/studies-v4/index.html
+++ b/studies-v4/index.html
@@ -10,6 +10,33 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
     <link rel="stylesheet" href="style.css">
+
+    <!-- SEO IV | Schema & Google -->
+    <script type="application/ld+json">
+        {
+            "@context": "https://schema.org",
+            "@type": "Collection",
+            "collectionSize": "5",
+            "about": "Estudos Diários de Códigos e Composição",
+            "name": "Estudos Diários de Códigos e Composição",
+            "description": "Exercícios de HTML, CSS, JavaScript, norteados por UI e UX.",
+            "image": "https://images.unsplash.com/photo-1533738363-b7f9aef128ce?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=435&q=80",
+            "accountablePerson": {
+                "@type": "Person",
+                "name": "Leo Thomas Monteiro"
+            },
+            "author": {
+                "@type": "Person",
+                "name": "Leo Thomas Monteiro"
+            },
+            "dateCreated": "2022-08-02",
+            "dateModified": "2022-08-10",
+            "inLanguage": {
+                "@type": "Language",
+                "name": "pt-BR"
+            }
+        }
+    </script>
 </head>
 <body>
     <header class="container">
@@ -75,6 +102,8 @@
     <footer>
         <div class="container text-center mt-5 mb-3">
             <p><a href="https://anotherleo.github.io">Leo Thomas Monteiro</a> &copy; 2022.</p>
+            <p class="small">Exercícios de HTML, CSS, JavaScript, norteados por UI e UX.
+                <br>Uso de Bootstrap 5.2 e Less.js para acelerar o desenvolvimento.</p>
         </div>
     </footer>
 
