--- a/studies-v4/index.html
+++ b/studies-v4/index.html
@@ -44,7 +44,7 @@
             <div class="col-md-8">
                 <div class="p-5">
                     <div class="pl-5 pr-5 pt-3 mt-4 mb-5 header--effect">
-                        <h1>
+                        <h1 class="animate__animated animate__bounce">
                             Estudos Diários
                             <br>de Códigos e Composição
                         </h1>
