--- a/studies-v4/05/index.html
+++ b/studies-v4/05/index.html
@@ -12,6 +12,22 @@
     <link rel="stylesheet" href="libs/owl.carousel.min.css">
     <link rel="stylesheet" href="libs/owl.theme.default.min.css">
     <link rel="stylesheet" href="style.css">
+
+    <!-- SEO IV | Schema & Google -->
+    <script type="application/ld+json">
+        {
+            "@context": "https://schema.org",
+            "@type": "CreativeWork",
+            "name": "Nº5 | UM GATO",
+            "image": "https://images.unsplash.com/photo-1533738363-b7f9aef128ce?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=435&q=80",
+            "author": {
+                "@type": "Person",
+                "name": "Leo Thomas Monteiro"
+            },
+            "dateCreated": "2022-08-10",
+            "description": "HTML, CSS, Less.js, tipografia Aqua."
+        }
+    </script>
 </head>
 <body>
 
@@ -26,7 +42,7 @@
                     </div>
                     <div class="col-md-6">
                         <div class="header--effect py-5">
-                            <h1>Nº5</h1>
+                            <h1>Nº5 | UM GATO</h1>
                             <p>10/08/2022 | Exercício livre.
                                 <br>Tipografia: Aqua.</p>
                             <hr>
