--- a/studies-v4/05/index.html
+++ b/studies-v4/05/index.html
@@ -25,7 +25,8 @@
                 "name": "Leo Thomas Monteiro"
             },
             "dateCreated": "2022-08-10",
-            "description": "HTML, CSS, Less.js, tipografia Aqua."
+            "description": "HTML, CSS, Less.js, tipografia Aqua.",
+            "url": "https://anotherleo.github.io/leo-projects//studies-v4/05/index.html"
         }
     </script>
 </head>
