--- a/studies-v4/06/index.html
+++ b/studies-v4/06/index.html
@@ -1,36 +1,70 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Estudos Diários de Códigos e Composição</title>
+
+    <!-- stylesheets -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
+    <link rel="stylesheet" href="style.css">
+
+    <!-- SEO IV | Schema & Google -->
+    <script type="application/ld+json">
+    </script>
 </head>
 <body>
 
-    <img src="https://cdn-icons-png.flaticon.com/512/6988/6988119.png" alt="">
-    <p>Recursos Online</p>
-    
-    <img src="https://cdn-icons-png.flaticon.com/512/6988/6988547.png" alt="">
-    <p>Aprendizado de Idioma</p>
+    <header class="container">
+        <div class="row justify-content-center">
+            <div class="col-md-8">
+                <div class="pl-5 pr-5 pt-3 mt-4 mb-5 header--effect">
+                    <h1>Nº6 | TEXT SECTION</h1>
+                    <p>02/08/2022 | Exercício livre.
+                        <br>Tipografia: Aqua Grotesque e Raleway.
+                        <br>Exemplo de post de blog com backdrop-filter de blur e pattern no background.
+                    </p>
+                    <hr>
+                </div>
+            </div>
+        </div>
+    </header>
 
-    <img src="https://cdn-icons-png.flaticon.com/512/6988/6988067.png" alt="">
-    <p>Gamificação</p>
-
-    <img src="https://cdn-icons-png.flaticon.com/512/8228/8228474.png" alt="">
-    <p>Roadmap de Conteúdos</p>
-
-    <img src="https://cdn-icons-png.flaticon.com/512/8187/8187776.png" alt="">
-    <p>Desafios Constantes</p>
-
-    <img src="https://cdn-icons-png.flaticon.com/512/8187/8187816.png" alt="">
-    <p>Certificados</p>
+    <main class="container">
+        <div class="row justify-content-center">
+            <div class="col-md-8 blog__post">
+                <div class="row">
+                    <div class="col">
+                        <h2>Lorem ipsum dolor sit.</h2>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col">
+                        <img src="https://images.unsplash.com/photo-1519682577862-22b62b24e493?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80" alt="livro" class="img-fluid">
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col">
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quisquam, cupiditate ex deserunt reprehenderit at dolores aliquam! In illo fugit animi obcaecati, cupiditate similique laudantium assumenda dolore, veniam consequuntur praesentium beatae!</p>
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nulla, aliquam est. Velit deserunt iusto molestiae vel quis inventore veniam et! Repudiandae neque inventore asperiores ab.</p>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sit asperiores consectetur totam consequatur sequi tempore est? Tempora consequatur facilis quaerat corporis autem veritatis eligendi, aliquam pariatur atque minima excepturi beatae unde nemo. Repellendus, debitis! Molestiae voluptates exercitationem voluptatem. Atque dignissimos, voluptatum aliquam velit doloremque, repellendus quam perspiciatis, tempore natus quae ratione laborum corrupti sunt ab.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </main>
 
     <footer>
-        Ícones de https://www.flaticon.com/authors/juicy-fish/sketchy?author_id=313
+        <div class="container text-center mt-4 mb-3">
+            <p><a href="https://anotherleo.github.io">Leo Thomas Monteiro</a> &copy; 2022. <a href="../index.html">Estudos Diários de Códigos e Composição.</a>
+                <br>Imagem de Daniel Alexander via <a href="https://unsplash.com/photos/_KHP8d4EbbE">Unsplash</a>.</p>
+        </div>
+        <div class="colored-line"></div>
     </footer>
 
-
-
+    <!-- Bootstrap 5.2 -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
