--- a/studies-v4/index.html
+++ b/studies-v4/index.html
@@ -101,6 +101,13 @@
                             <p>Nº 6</p>
                         </a>
                     </div>
+
+                    <div class="col-md-3 py-1">
+                        <a class="card" href="07/index.html">
+                            <img src="https://images.unsplash.com/photo-1658848588646-58417ec28548?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=386&q=80" alt="cover" class="img-fluid">
+                            <p>Nº 7</p>
+                        </a>
+                    </div>
                 </div>
             </div>
         </div>
