--- a/studies-v4/index.html
+++ b/studies-v4/index.html
@@ -108,6 +108,13 @@
                             <p>Nº 7</p>
                         </a>
                     </div>
+
+                    <div class="col-md-3 py-1">
+                        <a class="card" href="08/index.html">
+                            <img src="https://images.unsplash.com/photo-1584720175631-f9d3633a2e78?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=387&q=80" alt="cover" class="img-fluid">
+                            <p>Nº 8</p>
+                        </a>
+                    </div>
                 </div>
             </div>
         </div>
