--- a/studies-v4/08/index.html
+++ b/studies-v4/08/index.html
@@ -4,7 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <title>Nº8 | CAROUSEL SECTION</title>
+    <meta name="description" content="Exercício de Códigos e Composição Nº 8: Carrossel.">
+
+    <!-- SEO | Open Graph -->
+    <meta property="og:title" name="og:title" content="Nº8 | CAROUSEL SECTION">
+    <meta property="og:image" content="https://images.unsplash.com/photo-1584720175631-f9d3633a2e78">
+    <meta name="twitter:label1" content="Autor" />
+    <meta name="twitter:data1" content="Leo T. Monteiro" />
+    <meta name="twitter:label2" content="Tempo de leitura" />
+    <meta name="twitter:data2" content="1 minuto" />
 
     <!-- stylesheets -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css">
