--- a/studies-v4/09/index.html
+++ b/studies-v4/09/index.html
@@ -21,7 +21,8 @@
                     <h1>Nº9 | FORM SECTION</h1>
                     <p>20/08/2022 | Exercício de formulário e validação.
                         <br>Tipografia: Raleway.
-                        <br>Tutorial <a href="https://www.devmedia.com.br/validacao-com-jquery-como-usar-o-plugin-validation/33670">"Validação com jQuery: Como usar o plugin Validation"</a>.
+                        <br>Tutorial: <a href="https://www.devmedia.com.br/validacao-com-jquery-como-usar-o-plugin-validation/33670">"Validação com jQuery: Como usar o plugin Validation"</a>.
+                        <br>Projeto Referência: <a href="https://matriculapremier.com.br">Matrícula Premier</a>.
                     </p>
                     <hr>
                 </div>
@@ -109,6 +110,8 @@
         label.error {
             color: red;
             font-size: 12px;
+            margin-top: 3px;
+            margin-bottom: 5px;
         }
     </style>
 </body>
