--- a/studies-v4/09/index.html
+++ b/studies-v4/09/index.html
@@ -53,7 +53,7 @@
                         </form>
                     </div>
                     <div class="col-md-5">
-                        <img src="https://images.unsplash.com/photo-1579444741963-5ae219cfe27c?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80" alt="cover" class="img-fluid">
+                        <img src="https://images.unsplash.com/photo-1579444741963-5ae219cfe27c?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80" alt="formulário" class="img-fluid">
                     </div>
                 </div>
             </div>
