--- a/studies-v4/index.html
+++ b/studies-v4/index.html
@@ -115,6 +115,13 @@
                             <p>Nº 8</p>
                         </a>
                     </div>
+
+                    <div class="col-md-3 py-1">
+                        <a class="card" href="09/index.html">
+                            <img src="https://images.unsplash.com/photo-1579444741963-5ae219cfe27c?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80" alt="cover" class="img-fluid">
+                            <p>Nº 9</p>
+                        </a>
+                    </div>
                 </div>
             </div>
         </div>
