--- a/studies-v4/09/index.html
+++ b/studies-v4/09/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nº9 | ABOUT SECTION</title>
+    <title>Nº9 | FORM SECTION</title>
 
     <!-- stylesheets -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css">
@@ -74,7 +74,7 @@
     <!-- jQuery 3.1.1 -->
     <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js"></script>
     
-    <!-- jQuery Validation Plugin -->
+    <!-- jQuery Validation Plugin 1.19.5 -->
     <script src="https://cdn.jsdelivr.net/npm/jquery-validation@1.19.5/dist/jquery.validate.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/jquery-validation@1.19.5/dist/additional-methods.js"></script>
     <script>
