--- a/studies-v4/index.html
+++ b/studies-v4/index.html
@@ -122,6 +122,12 @@
                             <p>Nº 9</p>
                         </a>
                     </div>
+                    <div class="col-md-3 py-1">
+                        <a class="card" href="10/index.html">
+                            <img src="https://images.unsplash.com/photo-1620767317854-aa89c01f4dcd?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=387&q=80" alt="cover" class="img-fluid">
+                            <p>Nº 10</p>
+                        </a>
+                    </div>
                 </div>
             </div>
         </div>
