--- a/100days/index.html
+++ b/100days/index.html
@@ -55,6 +55,25 @@
                         <p>Comecei o curso de <strong>React com JavaScript: lidando com arquivos estáticos</strong>. Logo de início, senti dificuldade com o uso do Sass no React, e decidi fazer o curso de Sass da Alura, o <strong>SASS: CSS sintaticamente espetacular</strong> e concluí o primeiro capítulo. Também fiz essa webpage aqui do desafio.</p>
                     </div>
                 </article>
+                <article class="col-md-4">
+                    <div>
+                        <h3>#3</h3>
+                        <em>22/11/2022</em>
+                        <p>Segui o curso de <strong>SASS: CSS sintaticamente espetacular</strong>, e analisando com o que sei de Less, não vi grande vantagem. Decidi continuar o curso de React amanhã, usando Less ao invés de Sass, e ver como me saio. Como prática, fiz um site simples em React chamado 'A Jornada' e treinei recebimento de props, sobre uma customização de D&D. Acho fantástico o quanto RPG tem facilitado para ter ideias de práticas.</p>
+                    </div>
+                </article>
+                <article class="col-md-4">
+                    <div>
+                        <img src="assets/img/giphy2.gif" alt="gif" class="img-fluid">
+                    </div>
+                </article>
+                <article class="col-md-4">
+                    <div>
+                        <h3>#4</h3>
+                        <em>23/11/2022</em>
+                        <p>Fiquei curioso e vi alguns vídeos sobre Next.js e também APIs pela manhã. Dá um certo desespero pensar que estou aprendendo React e já deveria pular para o Next, mas vou manter meu foco!</p>
+                    </div>
+                </article>
             </div>
         </div>
     </section>
