--- a/studies-v5/alura-flex-grid/index.html
+++ b/studies-v5/alura-flex-grid/index.html
@@ -15,7 +15,9 @@
 </head>
 <body>
     <header class="header">
-		<button class="header__menu" aria-label="menu"><i></i></button>
+		<button class="header__menu" aria-label="menu">
+			<i></i>
+		</button>
 		<img src="assets/img/logo.svg" alt="Logotipo HZC" class="header__logo"/>
 		<button class="header__notifications" aria-label="notificação"><i></i></button>
 	</header>
@@ -28,6 +30,10 @@
 		<a href="#" class="sidebar__link camisas">Camisas</a>
 		<a href="#" class="sidebar__link pinturas">Pinturas</a>
 	</nav>
+
+	<main class="main">
+		
+	</main>
 
 
 	<script src="assets/scripts/main.js"></script>
